--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,53 @@
-amqp==5.2.0
-aniso8601==9.0.1
-async-timeout==4.0.3
-backports.zoneinfo==0.2.1
-billiard==4.2.0
-blinker==1.5
-celery==5.3.5
-chardet==5.2.0
-click==8.1.3
-click-didyoumean==0.3.0
+amqp==5.3.1
+aniso8601==10.0.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+async-timeout==5.0.1
+billiard==4.2.1
+blinker==1.9.0
+cachelib==0.13.0
+celery==5.4.0
+cffi==1.17.1
+click==8.1.8
+click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
-dnspython==2.3.0
-email-validator==1.3.1
-Flask==2.2.3
+colorama==0.4.6
+dnspython==2.7.0
+email_validator==2.2.0
+Flask==3.1.0
+Flask-Caching==2.3.1
 Flask-Excel==0.0.7
-Flask-Login==0.6.2
+Flask-Login==0.6.3
 Flask-Principal==0.4.0
 Flask-RESTful==0.3.10
-Flask-Security-Too==5.1.2
-Flask-SQLAlchemy==3.0.3
-Flask-WTF==1.1.1
-greenlet==2.0.2
-idna==3.4
-importlib-metadata==6.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-kombu==5.3.3
-lml==0.1.0
-MarkupSafe==2.1.2
+Flask-Security==5.6.1
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+greenlet==3.1.1
+idna==3.10
+importlib_resources==6.5.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jsonify==0.5
+kombu==5.5.1
+lml==0.2.0
+MarkupSafe==3.0.2
 passlib==1.7.4
-prompt-toolkit==3.0.40
-pyexcel==0.7.0
-pyexcel-io==0.6.6
+prompt_toolkit==3.0.50
+pycparser==2.22
+pyexcel==0.7.2
+pyexcel-io==0.6.7
 pyexcel-webio==0.1.4
-python-dateutil==2.8.2
-pytz==2023.3.post1
-redis==5.0.1
-six==1.16.0
-SQLAlchemy==2.0.6
+python-dateutil==2.9.0.post0
+pytz==2025.1
+redis==5.2.1
+six==1.17.0
+SQLAlchemy==2.0.39
 texttable==1.7.0
-typing-extensions==4.5.0
-tzdata==2023.3
+typing_extensions==4.12.2
+tzdata==2025.1
 vine==5.1.0
-wcwidth==0.2.9
-Werkzeug==2.2.3
-WTForms==3.0.1
-zipp==3.15.0
+wcwidth==0.2.13
+Werkzeug==3.1.3
+WTForms==3.2.1
